--- a/src/styles/TaskItem.module.css
+++ b/src/styles/TaskItem.module.css
@@ -33,6 +33,17 @@
   margin-right: 10px;
 }
 
+.inputField {
+  margin-right: 10px;
+  padding: 10px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  width: 100%;
+  height: 30px;
+  flex-grow: 1;
+}
+
 button {
   padding: 6px 12px;
   font-size: 0.9em;
@@ -71,5 +82,14 @@ button:disabled {
   .taskItemButtons {
     width: 100%;
     justify-content: space-between;
+  }
+
+  .inputField {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 1em;
+    width: 100%;
+    height: 30px;
+    flex-grow: 1;
   }
 }
