--- a/src/styles/TaskItem.module.css
+++ b/src/styles/TaskItem.module.css
@@ -11,11 +11,12 @@
   width: 100%;
 }
 
-.taskContent {
+.taskActions {
   display: flex;
   align-items: center;
   gap: 10px;
   width: 100%;
+  flex-wrap: wrap;
 }
 
 .taskText {
@@ -34,6 +35,10 @@
   font-size: 1em;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.taskMarker {
+  margin-right: 10px;
 }
 
 button {
@@ -55,6 +60,14 @@ button:disabled {
   cursor: not-allowed;
 }
 
-.taskMarker {
-  margin-right: 10px;
+@media (max-width: 600px) {
+  .taskContent {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .taskText {
+    width: 100%;
+    margin-bottom: 10px;
+  }
 }
